--- a/App.css
+++ b/App.css
@@ -1,33 +1,41 @@
-* {
+body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #333333;
-  color: #ffffff;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #202020;
+  color: #fff;
 }
 
 .feed-container {
-  max-width: 800px;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 20px;
 }
 
 .feed-item {
-  border: 1px solid #ffffff;
-  margin-bottom: 20px;
+  margin: 10px;
   padding: 10px;
+  background-color: #292929;
+  border-radius: 5px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  width: 30%;
 }
 
 .feed-item img {
   max-width: 100%;
   height: auto;
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 
 .feed-item p {
-  margin: 10px 0;
+  margin: 0;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+h2 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
